# neuroboros

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  codespell.yml
doc/design/: 1-bids-layout.md
scripts/: resample_HCP_MMP.py
src/neuroboros/: __init__.py  _version.py  archive.py  benchmark.py  ensemble.py  glm.py  io.py  isc.py  linalg.py  plot2d.py  plot_mebrains.py  searchlights.py  spaces.py  stats.py
src/neuroboros/datasets/: __init__.py  camcan_bang.txt  camcan_rest.txt  camcan_smt.txt
src/neuroboros/linalg/: __init__.py  base.py  gram.py  ridge.py
src/neuroboros/support_files/: atlas-TianS1S2S3S4_combined_keylabel.tsv  atlas-TianS1_space-MNI152NLin2009cAsym_res-02.lut.tsv  atlas-TianS2_space-MNI152NLin2009cAsym_res-02.lut.tsv  atlas-TianS3_space-MNI152NLin2009cAsym_res-02.lut.tsv  atlas-TianS4_space-MNI152NLin2009cAsym_res-02.lut.tsv  atlas-Tian_Subcortex_S1_3T_VoxelCount.txt  atlas-Tian_Subcortex_S2_3T_VoxelCount.txt  atlas-Tian_Subcortex_S3_3T_VoxelCount.txt  atlas-Tian_Subcortex_S4_3T_VoxelCount.txt  atlas-Tian_Subcortex_space-MNI152NLin2009cAsym_res-02.lut.tsv  atlas-aseg_VoxelCount.txt  atlas-aseg_space-MNI152NLin2009cAsym_res-02.lut.tsv
src/neuroboros/surface/: __init__.py  _barycentric.py  _barycentric.pyx  align_surface.py  areal.py  barycentric.py  dijkstra.py  faces.py  nnfr.py  properties.py  subdivision.py  union.py  voronoi.py
src/neuroboros/utils/: __init__.py
tests/: test_datasets.py  test_ensemble.py  test_glm.py  test_gram.py  test_isc.py  test_mapping.py  test_ridge.py  test_searchlights.py  test_smooth.py  test_stats.py  test_surface.py
